fixed the alignement button "go and enjoy it ..."

--- a/css/styles.css
+++ b/css/styles.css
@@ -280,6 +280,8 @@ h1 {
   z-index: 3;
 }
 .choices .choices-button .button-label {
+  display: flex;
+  align-items: center;
   cursor: pointer;
   width: 100%;
   font-size: 20px;
