--- a/sass/main.scss
+++ b/sass/main.scss
@@ -124,6 +124,8 @@ h1 {
             z-index: 3;
         }
         .button-label {
+            display:flex;
+            align-items: center;
             cursor: pointer;
             width: 100%;
             font-size: 20px;
